--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "lucide-react": "^0.475.0",
     "motion": "^12.23.24",
     "next": "15.1.11",
+    "next-intl": "^4.7.0",
     "next-themes": "^0.2.1",
     "prisma": "^6.18.0",
     "react": "^19.0.0",
